layout z-index bug (ie7)

--- a/web/css/skin/inner.css
+++ b/web/css/skin/inner.css
@@ -265,7 +265,7 @@ border-radius:5px;
 .searchbox {float:right; width:343px; height:28px; margin-top:2px}
 .searchbox .searchtext {width:297px}
 
-.column215 {float:left; width:215px; margin-left:-100%; position:relative}
+.column215 {float:left; width:215px; margin-left:-100%; position:relative; z-index:5;}
 .column685 {margin:0 0 0 235px; position:relative; z-index:1;}
 
 .bBlueButton .link1,
@@ -356,7 +356,6 @@ LABEL.checked {color:#ffa901}
 	-webkit-box-shadow:0 0 9px #eaeaea;
 	box-shadow:0 0 9px #eaeaea;
 	//behavior: url(ie-css3.htc)
-
 	}
 .bSpec h2 {
     color: #FFA901;
